// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UI/TripleCheckbox should render TripleCheckbox with different value 1`] = `
<SimpleComposeWrapper [indeterminate:true]
  checked={true}
  className="undetermined"
  id="TripleCheckbox2"
  onChange={[Function]}
  size="m"
  view="default"
/>
`;

exports[`UI/TripleCheckbox should render TripleCheckbox with set value 1`] = `
<SimpleComposeWrapper [indeterminate:true]
  checked={true}
  className=""
  id="TripleCheckbox1"
  onChange={[Function]}
  size="m"
  view="default"
/>
`;

exports[`UI/TripleCheckbox should render TripleCheckbox with unset value 1`] = `
<SimpleComposeWrapper [indeterminate:true]
  checked={false}
  className=""
  id="TripleCheckbox3"
  onChange={[Function]}
  size="m"
  view="default"
/>
`;
